# dsx-connect

./: .dockerignore  .gitignore  .trufflehog-exclude  README.md  mkdocs.yml  tasks.py  versions.json
archives/: getting-started.md
desktop_shared/: index.js  package.json
docs/: getting-started-connector.md  getting-started-core.md  getting-started.md  google-cloud-storage.md  index.md  overview.md  requirements.txt
dsx_connect/: Dockerfile  (+8 more)
dsx_connect_ng/: Dockerfile  README.md  bootstrap-plan.md  pyproject.toml
dsx_connect_ng/deploy/helm/: Chart.yaml  README.md  values-local-stack.yaml  values-local.yaml  values-runtime.example.yaml  values.yaml
dsx_connect_ng/deploy/helm/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  ingress.yaml  postgres.yaml  rabbitmq.yaml  worker-deployments.yaml
dsx_connect_ng/docs/: api-boundaries.md  architecture.md  connector-registration-leases.md  index.md  runtime.md  shared-control-plane.md
dsx_connect_ng/docs/handoffs/: 2026-06-12-dsx-connect-ng.md
dsx_connect_ng/dsx_connect_ng/: __init__.py  app.py  config.py  ops_logging.py  recovery.py  version.py
dsx_connect_ng/dsx_connect_ng/api/: __init__.py  dependencies.py  job_bus_dependencies.py  job_service_dependencies.py
dsx_connect_ng/dsx_connect_ng/api/routes/: __init__.py  control_plane.py  execution.py  health.py  ui.py
dsx_connect_ng/dsx_connect_ng/control_plane/: __init__.py  bootstrap.py  config_models.py  models.py  postgres_repo.py  repository.py  service.py
dsx_connect_ng/dsx_connect_ng/integrations/: __init__.py  contracts.py
dsx_connect_ng/dsx_connect_ng/jobs/: __init__.py  bootstrap.py  bus.py  contracts.py  models.py  postgres_repo.py  rabbitmq_bus.py  repository.py  service.py  topology.py
dsx_connect_ng/dsx_connect_ng/local/: __init__.py  dsx_connect_ng_local.py
dsx_connect_ng/dsx_connect_ng/readers/: __init__.py  base.py  cached.py  contracts.py  gcs_native.py  local_path.py  proxy.py  resolver.py
dsx_connect_ng/dsx_connect_ng/result_sink/: __init__.py  base.py  bootstrap.py  json_lines.py  models.py  stdout.py
dsx_connect_ng/dsx_connect_ng/ui/: operator_console.html
dsx_connect_ng/dsx_connect_ng/ui/assets/: manifest.webmanifest
dsx_connect_ng/dsx_connect_ng/workers/: __init__.py  connector_actions.py  consumer.py  delivery_worker.py  dianna_worker.py  errors.py  policy_engine.py  policy_worker.py  relay_worker.py  remediation_worker.py  result_sink_worker.py  runtime.py  scan_worker.py
dsx_connect_ng/examples/vector/: README.md  vector-chronicle.yaml  vector-console.yaml  vector-splunk-hec.yaml
dsx_connect_ng/migrations/: 0001_control_plane.sql  0002_jobs.sql  0003_job_items.sql  0004_job_item_stages.sql  0005_job_item_dianna_stage.sql  0006_job_item_content_source.sql  0007_job_item_delivery_requirements.sql  0008_job_item_policy_stage.sql  0009_job_item_progress_indexes.sql  0010_scan_runtime_leases.sql  0011_outbox_clock_timestamp.sql  0012_connector_instances.sql
dsx_connect_ng/tests/: test_batch_proxy_reader_validation_script.py  test_contract_message_bodies.py  test_control_plane_bootstrap.py  test_control_plane_config_models.py  test_control_plane_postgres_repo.py  test_control_plane_repository.py  test_control_plane_routes.py  test_control_plane_service.py  test_dockerfile.py  test_filesystem_remediation_e2e_validation_script.py  test_gcs_remediation_e2e_validation_script.py  test_job_bus.py  test_job_bus_bootstrap.py  test_job_contracts.py  test_job_models.py  test_job_postgres_repo.py  test_job_repository.py  test_job_service.py  test_job_service_bootstrap.py  test_job_topology.py  test_local_runtime.py  test_postgres_schema.py  test_reader_contracts.py  test_relay_worker.py  test_result_sink.py  test_ui_routes.py  test_worker_consumer.py  test_worker_stubs.py
dsx_connect_sdk/: README.md  pyproject.toml
dsx_connect_sdk/dsx_connect_sdk/: __init__.py  cli.py  client.py  exceptions.py  models.py
dsx_connect_sdk/dsx_connect_sdk/domains/: __init__.py  connectors.py  core.py  dianna.py  results.py  scan.py  sse.py
dsx_transfer/: README.md  mkdocs.yml  pyproject.toml
dsx_transfer/docs/: architecture.md  audit-and-checkpointing.md  index.md  integrations.md  product-modes-and-diagrams.md  roadmap.md  scanner-and-policy.md  sftpgo-demo-complete.md  sftpgo-exemplar.md  transfer-platform-adapters.md  what-this-is.md
dsx_transfer/docs/handoffs/: 2026-06-12-dsx-transfer.md
dsx_transfer/dsx_transfer/: __init__.py  app.py  audit.py  checkpoint.py  cli.py  config.py  contracts.py  dsxa_file_types.py  dsxa_scan_gate.py  engine.py  models.py  policy.py  scan_gates.py
dsx_transfer/dsx_transfer/adapters/: __init__.py  filesystem.py  gcs.py  sftpgo.py
dsx_transfer/examples/sftpgo/: Dockerfile.dsx-transfer  README.md  docker-compose.dsxa.yml  docker-compose.ui.yml  docker-compose.yml  dsx-transfer-entrypoint.sh  sftp_put.expect
dsx_transfer/tests/: test_app.py  test_cli.py  test_dsxa_scan_gate.py  test_filesystem_transfer.py  test_gcs_transfer.py  test_policy.py  test_transfer_persistence.py  test_transfer_platform_adapter.py
dsxa_desktop/src-tauri/: Cargo.toml  tauri.conf.json
dsxa_desktop/src-tauri/capabilities/: default.json
dsxa_desktop/src-tauri/scripts/: cargo_audit_check.sh
dsxa_desktop/src-tauri/src/: lib.rs  main.rs
dsxa_sdk_py/: .gitignore  MANIFEST.in  NOTICE.md  README.md  pyproject.toml
dsxa_sdk_py/dsxa_sdk_py/: __init__.py  cli.py  client.py  models.py
dsxa_sdk_py/examples/: __init__.py
dsxa_sdk_py/examples/webapp/: Dockerfile  README.md  __init__.py  app.py  cloudbuild.yaml  policy.py
dsxa_sdk_py/examples/webapp/templates/: index.html
dsxa_sdk_py/scripts/: memory_probe.py
dsxa_sdk_py/tests/: conftest.py  test_dsxa_sdk_client.py  test_dsxa_sdk_integration.py
dsxa_tui/: README.md  pyproject.toml
dsxa_tui/dsxa_tui/: app.py
(+556 files in other folders)
