[project]
name = "dsx-connect-sdk"
version = "0.1.0"
description = "Python SDK and CLI for DSX-Connect DIANNA APIs"
authors = [
  { name = "Deep Instinct" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
dsx-dianna = "dsx_connect_sdk.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dsx_connect_sdk*"]
